# fastF

./: .gitignore  CMakeLists.txt  README.md  env.sh  read.me
Archive/bamonly/: a.out  chatgpt.c  test.c
Archive/fhash/: hashtable.h
benchmark/: README.md  fastF_disk.sh  step1_downsample.sh  step2_conversion.sh
data/: BM_test.bam  CR_CB.txt  barcodes.txt  features.tsv  rst.csv  temp.fastq  temp.txt  temp1.fastq  test.bam  vg_logfile_22750.out  whitelist.txt
htslib-1.17/: bgzf.pico  config.mk  config.status  errmod.pico  header.pico  hfile.pico  hfile_gcs.pico  hfile_s3.pico  htslib-uninstalled.pc  multipart.pico  probaln.pico  region.pico  sam.c  sam.pico  tbx.pico  textutils.pico  vcf.pico  vcf_sweep.pico
htslib-1.17/cram/: cram_encode.pico  cram_stats.pico  mFILE.pico  pooled_alloc.pico  string_alloc.pico
htslib-1.17/htscodecs/htscodecs/: fqzcomp_qual.pico  htscodecs.pico  rANS_static.pico  rANS_static32x16pr.pico  rANS_static32x16pr_avx512.pico  rANS_static32x16pr_sse4.pico  rANS_static4x16pr.pico  rle.pico  tokenise_name3.pico
htslib/lib/: libhts.so.3
src/: README.md  bam2db_ds.c  bam2db_ds.h  extract.c  extract.h  fastq_filter.c  filter.c  main.c  utils.c
src/bamonly/: data.c  data.h  hash.out  hashtable.c  hashtable.h  test.txt
src/fhash/: hashtable.c
src/v0.9/: fastq_filter.c  fastq_filter.h  main.c
src/v1.0/: fastq_filter.h
src/v1.0.9/: argparse.h  fastq_filter.c  fastq_filter.h  fastq_parse.c  main.c
src/v1.1/: fastq_filter.c  fastq_filter.h  main.c  test
src/v1.2/: argparse.c  example_parser.c  fastq_filter.c
src/v1.2.09/: a.out  count.c  count.h  extract.c  extract.h  fastq_filter.c  fastq_filter.h  main.c  subcommands.c
src/v1.2.099/: README.md  count.c  count.h  extract.h  fastq_filter.c  fastq_filter.h  main.c
src/v1.2.0999/: README.md  argparse_.h  bam2db.c  bam2db.h  bam2db_ds.c  bam2db_ds.h  bam2db_ds_copy.c  bam2db_ds_copy.h  bam2db_ds_umi.c  bam2db_old.c  bam2db_pure.c  bam2db_xf.c  count.c  count.h  extract.c  extract.h  filter.c  filter.h  main.c  main_copy.c  utils.h
test/: CMakeLists.txt  a.out  bam2db.c  bitfield.c  bitfield2.c  cell.out  convert_bam.c  encode.c  encode.h  encode_test.c  fastF.c  hash_cellbarcode.c  hash_cellbarcode_selfdefined.c  hash_one_cell.c  myprogram  sql_query.c  sql_test.c  test  test.c  test.sql  test_bitfield.c  test_data.c  test_decode.c  test_sample.c  test_sql_create_drop_table.c  test_sql_table2gz.c  vg.c  vg_logfile_14357.out  vg_logfile_17475.out  vg_logfile_17787.out  vg_logfile_23575.out  vg_logfile_25339.out  vg_logfile_28681.out
